feat: 增加单正文书签套红逻辑

--- a/server/wwwroot/resource/wps.html
+++ b/server/wwwroot/resource/wps.html
@@ -54,6 +54,7 @@
           </button>
           <button class="btn" id="customDoc">自定义测试</button>
           <button class="btn" id="editDoc">编辑文档</button>
+          <button class="btn" id="insertRedHead">单正文标签套头</button>
         </div>
       </div>
     </div>
