--- a/WpsOAAssist/importTemplate.html
+++ b/WpsOAAssist/importTemplate.html
@@ -100,14 +100,18 @@
             style="width: 100%"
             v-model="templateItem"
           >
-            <option value="-1">请选择模板</option>
-            <option v-for="(item, key) in templates" :value="key" :key="key">
-              {{item}}
+            <option value="-1" class="placeholder">请选择模板</option>
+            <option
+              v-for="(item, key) in templates"
+              :value="item.tempId"
+              :key="key"
+            >
+              {{item.name}}
             </option>
           </select>
         </div>
       </div>
-      <div class="action" style="height: 50%">
+      <div class="action">
         <div class="btn_box">
           <button class="action_btn" type="button" @click="cancel()">
             取消
@@ -131,7 +135,7 @@
    * 导入公文模板，并替换当前文档全部内容
    * @param templateURL  模板路径
    */
-  function importTemlateFile(templateURL) {
+  function importTemplateFile(templateURL) {
     var wpsApp = wps.WpsApplication();
     var activeDoc = wpsApp.ActiveDocument;
     if (!activeDoc) {
@@ -150,7 +154,7 @@
 
   const mimeTypeMap = {
     doc: "application/msword",
-    docx: "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+    docx: "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
   };
 
   // 获取选中项，拼接模板Url进行导入模板
@@ -167,13 +171,11 @@
       return;
     }
     const [_, type] = curTemp.name.match(/.([^.]+)$/i) || [];
-    const templateUrl = `${curTemp.url}&contenttype=${mimeTypeMap[type]}`;
-    // var p_Doc = wps.WpsApplication().ActiveDocument;
-    // var templatePath = GetDocParamsValue(p_Doc, "templatePath");
-    // if (templatePath == "") { templatePath = OA_DOOR.templateBaseURL; }
-    // var templateURL = templatePath + templateId;
-    // var templateURL = getHtmlURL("template/模板.docx");
-    importTemplateFile(templateUrl);
+
+    // 当后端返回的url为：http://xxxxjsnhgxv 这种类型的url时需要拼接contenttype
+    // const templateUrl = `${curTemp.url}&contenttype=${mimeTypeMap[type]}`;
+
+    importTemplateFile(curTemp.url);
     window.opener = null;
     window.open("", "_self", "");
     window.close();
@@ -190,7 +192,7 @@
     el: "#template",
     data: {
       templateItem: -1,
-      templates: []
+      templates: [],
     },
     methods: {
       GetTemplatePath(templateDataUrl) {
@@ -217,27 +219,19 @@
           //     orgId: l_params.orgId,
           //   }),
           success: function (res) {
-            console.log(res, "res>>>>>");
-            _this.templates = res;
-            console.log("模板列表数据：" + JSON.stringify(res));
+            console.log(res.data, "res>>>>>");
+            _this.templates = res.data;
+            console.log("模板列表数据：" + res.data);
           },
           error: function (res) {
             alert("获取响应失败");
             _this.templates = [];
-          }
+          },
         });
-
-        //本地静态列表
-        // this.templates = [
-        //   {
-        //     tempName: "模板",
-        //     tempId: 1,
-        //   },
-        // ];
-      }
+      },
     },
     mounted: function () {
       this.getAllTemplate();
-    }
+    },
   });
 </script>
